<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Meditação Cristã</string>
    <string name="action_about">Sobre</string>
    <string name="action_date">Escolher dia</string>
    <string name="action_speakout">Ouvir a meditação</string>
    <string name="tvLink">Ouça os podcast\'s:\n<a href="http://terceiramargemdorio.org/podcasts/">Terceira Margem do Rio em Revista</a>\n<a href="http://biblecast.com.br">Biblecast</a>\n<a href="https://soundcloud.com/heroisbc">Maná com Cevada</a>\n<a href="http://novotempo.com/audios/categoria/contracultura/">Contracultura</a>\n<a href="http://cristaoscansados.com.br/">Cristãos Cansados</a>\n<a href="http://pupilasembrasas.com.br/">Pupilas em brasa</a>\n\n Acesse:\n<a href="http://novotempo.com/hiperlinkados/">Hiperlinkados</a>\n<a href="http://terceiramargemdorio.org/">Terceira Margem do Rio</a>\n<a href="http://www.tracosdoreino.com.br/">Traços do Reino</a>\n<a href="http://mais.cpb.com.br/">Casa Publicadora Brasileira</a>\n</string>
    <string name="send_to">Enviar para</string>
    <string name="action_share">Compartilhar</string>
    <string name="title_activity_main">Guia ES</string>
    <string name="new_line">\n</string>
    <!-- This is an ad unit ID for a test ad. Replace with your own banner ad unit id. -->
    <string name="banner_ad_unit_id">ca-app-pub-5765621569845430/3645256504</string>
    <string name="interstitial_ad_id">ca-app-pub-5765621569845430/8535811823</string>
    <string name="interstitial_test_ad_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="app_ad_id">ca-app-pub-5765621569845430~9691790109</string>
    <string name="action_share_app">Compartilhar este APP</string>
    <string name="pref_improveread_category_title">Melhorias de Leitura</string>
    <string name="pref_title_font_size">Ajustar tamanho da letra</string>
    <string name="pref_title_type">Define qual meditação abrir ao iniciar</string>
    <string name="pref_sum_type">Abre o app na meditação escolhida</string>
    <string name="pref_sum_font_size">Facilita a leitura em dispositivos pequenos</string>
    <string name="pref_fontSizes_default">Normal</string>
    <string name="pref_type_default">0</string>
    <string name="pref_title_night_mode">Modo noturno</string>
    <string name="pref_sum_night_mode">Troca as cores para facilitar a leitura em ambientes escuros</string>
    <string name="action_settings">Configurações</string>
    <string name="pref_font_size_cancel">cancelar</string>
    <string name="erro">Ops! eu falhei! Mas Jesus não falha e pagou o preço</string>
    <string name="pref_timepreference_title">Define quando quer ser lembrado(a) de ler</string>
    <string name="pref_timepreference_dialog_title">Me lembre as</string>
    <string name="pref_tts_pitch_title">Ajusta a tonalidade da voz</string>
    <string name="pref_tts_rate_title">Define a velocidade de leitura</string>
    <string name="pref_tts_category_title">Audio da meditação</string>
    <string name="pref_timepreference_category_title">Lembrar-me</string>
    <string name="fab_label">Botão para compartilhar a meditação</string>
    <string name="action_favorites">Favoritos</string>
    <string name="loading">Carregando&#8230;</string>
    <string name="channel_name">Meditação</string>
    <string name="channel_description">Notificações do aplicativo Meditação Cristã Adventista</string>
</resources>
