<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_improveread_category_title">
        <ListPreference
            android:defaultValue="@string/pref_fontSizes_default"
            android:dialogTitle="@string/pref_title_font_size"
            android:entries="@array/pref_fontSizes_entries"
            android:entryValues="@array/pref_fontSizes_values"
            android:key="pref_font_size"
            android:negativeButtonText="@string/pref_font_size_cancel"
            android:summary="@string/pref_sum_font_size"
            android:title="@string/pref_title_font_size" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_night_mode"
            android:summary="@string/pref_sum_night_mode"
            android:title="@string/pref_title_night_mode" />


        <ListPreference
            android:defaultValue="@string/pref_type_default"
            android:dialogTitle="@string/pref_title_type"
            android:entries="@array/pref_type_entries"
            android:entryValues="@array/pref_type_values"
            android:key="pref_type_default"
            android:negativeButtonText="@string/pref_font_size_cancel"
            android:summary="@string/pref_sum_type"
            android:title="@string/pref_title_type" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_timepreference_category_title">
        <!--suppress AndroidElementNotAllowed -->
        <com.silas.meditacao.io.TimePreference
            android:defaultValue="360"
            android:dialogTitle="@string/pref_timepreference_dialog_title"
            android:key="pref_notification_hour"
            android:title="@string/pref_timepreference_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_tts_category_title">
        <!--suppress AndroidElementNotAllowed -->
        <SeekBarPreference
            android:defaultValue="2"
            android:key="pref_tts_rate"
            android:max="10"
            android:title="@string/pref_tts_rate_title" />
        <!--suppress AndroidElementNotAllowed -->
        <SeekBarPreference
            android:defaultValue="4"
            android:key="pref_tts_pitch"
            android:max="6"
            android:title="@string/pref_tts_pitch_title" />
    </PreferenceCategory>
</PreferenceScreen>
