<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_date"
        android:icon="@drawable/ic_today_white_24dp"
        android:title="@string/action_date"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_speakout"
        android:icon="@drawable/ic_baseline_play_circle_outline_24px"
        android:title="@string/action_speakout"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_share_app"
        android:title="@string/action_share_app"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_favorites_activity"
        android:title="@string/action_favorites"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        app:showAsAction="never" />
</menu>